[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag-mcp"
version = "0.1.0"
description = "Agentic RAG MCP Server for codebase search with multi-hop retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agentic RAG MCP Contributors" }
]
keywords = ["mcp", "rag", "agentic", "search", "codebase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.3.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-json>=0.24.0",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-xml>=0.7.0",
    "tree-sitter-sql>=0.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "xxhash>=3.4.0",
    "neo4j>=5.0.0",
    "langgraph>=1.0.10",
    "langchain-core>=1.2.16",
]

[project.optional-dependencies]
graph = [
    "neo4j>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentic-rag-mcp = "agentic_rag_mcp:main"

[project.urls]
Homepage = "https://github.com/anthropics/agentic-rag-mcp"
Repository = "https://github.com/anthropics/agentic-rag-mcp"
Issues = "https://github.com/anthropics/agentic-rag-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
